--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "liip/imagine-bundle": "^2.1",
         "php-http/guzzle6-adapter": "^1.1",
         "predis/predis": "^1.1",
         "symfony/console": "*",
@@ -14,7 +15,6 @@
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/yaml": "*",
-        "vestiaire/money": "^1.1",
         "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
@@ -78,13 +78,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.1.*"
+            "require": "^4.1.0"
         }
-    },
-    "repositories": [
-        {
-            "type": "composer",
-            "url" : "https://composer.vestiairecollective.com/"
-        }
-    ]
+    }
 }
