--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -18,12 +18,18 @@ doctrine:
         url: '%env(resolve:DATABASE_URL)%'
     orm:
         auto_generate_proxy_classes: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore
+        naming_strategy: doctrine.orm.naming_strategy.default
         auto_mapping: true
         mappings:
-            App:
+            Place:
                 is_bundle: false
-                type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+                type: yml
+                dir: '%kernel.project_dir%/src/Place'
+                prefix: 'App\Place'
+                alias: Place
+            Photo:
+                is_bundle: false
+                type: yml
+                dir: '%kernel.project_dir%/src/Photo'
+                prefix: 'App\Photo'
+                alias: Photo
